rm tidy argument

--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ options(max.print="75")
 opts_chunk$set(echo=TRUE,
 	             cache=TRUE,
                prompt=FALSE,
-               tidy=TRUE,
+#               tidy=TRUE,
                comment=NA,
                message=TRUE,
                warning=TRUE)
