--- a/index.Rmd
+++ b/index.Rmd
@@ -8,18 +8,10 @@ output:
     use_bookdown: true
     self_contained: false
     css: styles.css
+    includes:
+      in_header: matomo.html
 ---
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-80486908-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
 ```{r knitr_init, echo=FALSE, cache=FALSE}
 library(knitr)
